[package]
name = "dna-distributed-database"
version = "0.1.0"
edition = "2024"
default-run = "dna-distributed-database"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.4"
blst = "0.3.15"
clap = { version = "4.5.47", features = ["derive"] }
dashmap = "6.1.0"
hex = "0.4.3"
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sha3 = "0.10.8"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

